use vw for top value for background to allow a dynamic position on window re-size - this prevents the bgImage from moving too low into the steps

--- a/express/blocks/how-to-steps-accordion/how-to-steps-accordion.css
+++ b/express/blocks/how-to-steps-accordion/how-to-steps-accordion.css
@@ -91,7 +91,7 @@ main .how-to-steps-accordion .steps-content {
 main .how-to-steps-accordion .steps-content .steps-content-backg {
   position: absolute;
   width: 100%;
-  top: -140px;
+  top: -24vw;
   z-index: -1;
   height: 100%;
   transform: scale(0.9);
